# GPS-Analyzer

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.cargo/: config.toml
migrations/: 2_add_users.sql  3_constraints_and_api_keys.sql  4_jwt_refresh.sql  5_security_update.sql  6_remove_typestamp_constraint.sql  7_added_per_user_events.sql  8_added_not_null_to_racing.sql
src/: api.rs  errors.rs  internal.rs  io.rs  main.rs
src/api/: auth.rs  controller.rs  cors.rs  dto.rs  io.rs  model.rs  repository.rs  router.rs  service.rs  state.rs  util.rs
src/api/controller/: auth_controller.rs  event_controller.rs  file_controller.rs  file_upload.rs  generic.rs  tier_controller.rs  token_controller.rs  user_controller.rs
src/api/io/: file_repo.rs  tier_repo.rs  user_repo.rs
src/api/middleware/: auth.rs
src/api/model/: auth.rs  config.rs  dto.rs  racing_event.rs  tier.rs  user.rs
src/api/model/auth/: claims.rs  oauth.rs
src/api/model/dto/: event_request.rs  file_request.rs  jwt_request.rs  tier_request.rs  user_request.rs  user_requests.rs
src/api/repository/: auth_repository.rs  event_repository.rs  file_repository.rs  tier_repository.rs  token_repository.rs  user_repository.rs
src/api/service/: event_service.rs  file_service.rs  jwt_service.rs  oauth_service.rs  tier_service.rs  user_service.rs
src/api/util/: auth_util.rs  user_util.rs
src/errors/: app_error.rs  domain_error.rs  io_errors.rs  service_errors.rs
src/internal/: io.rs  model.rs  service.rs
src/internal/io/: track_loader.rs
src/internal/model/: analysis.rs  config.rs  spatial.rs  track.rs
src/internal/model/config/: analysis.rs  rider.rs
src/internal/model/spatial/: grid.rs
src/internal/model/track/: common.rs  reference.rs  riders.rs
src/internal/service/: geo_conversions.rs  service_errors.rs  snapping.rs  track_processor.rs
src/io/: io_errors.rs  track_loader.rs
src/model/: analysis.rs  config.rs
src/model/config/: coordinates.rs  snapping.rs
src/model/spatial/: grid.rs  points.rs
src/model/track/: common.rs  reference.rs  riders.rs
src/service/: geo_conversions.rs  service_errors.rs  snapping.rs  track_processor.rs
