[package]
name = "gps-analyzer"
version = "0.2.0"
edition = "2024"

[dependencies]
# Track analysis related
rayon = "1.8"
glam = "0.27"
bytemuck = "1.14"
wide = "1.1.1"
proj = {version = "0.31.0", features = ["bundled_proj"]}
quick-xml = "0.24.1"
chrono = "0.4.43"

# Api related
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.149"
uuid = { version = "1.19.0", features = ["serde","v4"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
axum = { version = "0.8.7", features = ["tokio", "http1", "http2", "macros", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.44"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio-util = { version = "0.7", features = ["io"] }